--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,9 +13,15 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+  
     steps:
     - uses: actions/checkout@v3
 
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.10.0
+      with:
+        mongodb-replica-set: test-rs
+      
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
