--- a/.github/workflows/misspell.yml
+++ b/.github/workflows/misspell.yml
@@ -12,7 +12,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: sobolevn/misspell-fixer-action@master
-    
+      with:
+        args: -s
     # - uses: peter-evans/create-pull-request@v2.4.4
     #   with:
     #     token: ${{ secrets.GITHUB_TOKEN }}
