--- a/.github/workflows/misspell.yml
+++ b/.github/workflows/misspell.yml
@@ -1,5 +1,4 @@
 name: misspell
-# only show spelling mistakes
 
 on:
   - push
@@ -12,10 +11,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: sobolevn/misspell-fixer-action@master
+    - uses: peter-evans/create-pull-request@v2.4.4
       with:
-        args: -s
-    # - uses: peter-evans/create-pull-request@v2.4.4
-    #   with:
-    #     token: ${{ secrets.GITHUB_TOKEN }}
-    #     commit-message: 'Fixes by misspell-fixer'
-    #     title: 'Typos fix by misspell-fixer'
+        token: ${{ secrets.GITHUB_TOKEN }}
+        commit-message: 'Fixes by misspell-fixer'
+        title: 'Typos fix by misspell-fixer'
